Fix timeline alignment

--- a/vgridjs/css/video-track.scss
+++ b/vgridjs/css/video-track.scss
@@ -161,6 +161,7 @@
 
 .timeline-track {
     background: white;
+    text-align: left;
 
     .timeline-box {
         border: 1px solid black;
